# NetTriage-AI

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.ai/: checkpoint.json  ledger.json  ledger.schema.json
docs/: architecture.md  issues.md  plan.md  progress.md  report.md
docs/references/: ref-api-deployment.md  ref-classification-rules.md  ref-csv-batch.md  ref-database-repository.md  ref-llm-deepseek.md  research-report.md
src/nettriage/api/: dependencies.py  errors.py  main.py
src/nettriage/batch/: csv_processor.py  exporter.py  field_mapper.py  file_store.py
src/nettriage/core/: config.py  logging.py  security.py
src/nettriage/db/: init_db.py  models.py  session.py
src/nettriage/llm/: base.py  deepseek.py  errors.py  output_validator.py  prompts.py
src/nettriage/repositories/: batch_repository.py  ticket_repository.py
src/nettriage/rules/: keyword_rules.py  review_policy.py  rule_classifier.py  text_normalizer.py
src/nettriage/schemas/: batch.py  classification.py  common.py  (+2 more)
tests/: conftest.py  fakes.py
tests/e2e/: test_csv_batch_flow.py
tests/fixtures/: malformed_tickets.csv  sample_tickets.csv
tests/integration/: test_batch_api.py  test_classify_api.py  test_error_format.py  test_health_api.py  test_minimal_ui.py  test_repository.py  test_tickets_api.py
tests/unit/: test_classification_service.py  test_deepseek_client.py  test_field_mapper.py  test_file_store.py  test_output_validator.py  test_review_policy.py  test_rule_classifier.py  test_security.py  test_text_normalizer.py
(+9 files in other folders)
